refactored everything bro